force-app/main/default/objects/ucinn_ascendv2__Salutation__c/ucinn_ascendv2__Salutation__c.object-meta.xml
<CustomObject>
    <description>The salutations that a constituent has.</description>
    <label>Salutation</label>
    <nameField>
        <label>Salutation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salutations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>