force-app/main/default/objects/ucinn_ascendv2__Salutation__c/fields/ucinn_ascendv2__Addressee_Line_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Addressee_Line_1__c</fullName>
    <label>Addressee Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>