force-app/main/default/objects/ucinn_ascendv2__Salutation__c/fields/ucinn_ascendv2__Author_Initials__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Author_Initials__c</fullName>
    <label>Author Initials</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ucinn_ascendv2__Salutation_Author__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>