force-app/main/default/objects/ucinn_ascendv2__Salutation__c/fields/ucinn_ascendv2__Author_Title__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Author_Title__c</fullName>
    <label>Author Title</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ucinn_ascendv2__Salutation_Author__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>SVP, University Advancement</fullName>
            </value>
            <value>
                <fullName>Provost</fullName>
            </value>
            <value>
                <fullName>Dean, Gerontology</fullName>
            </value>
            <value>
                <fullName>Dean, Cinematic Arts</fullName>
            </value>
            <value>
                <fullName>Dean, Social Work</fullName>
            </value>
            <value>
                <fullName>Dean, Price</fullName>
            </value>
            <value>
                <fullName>Dean, Architecture</fullName>
            </value>
            <value>
                <fullName>Dean, Dramatic Arts</fullName>
            </value>
            <value>
                <fullName>Dean, Libraries</fullName>
            </value>
            <value>
                <fullName>Dean, Pharmacy</fullName>
            </value>
            <value>
                <fullName>Vice President for Advancement Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>