force-app/main/default/objects/ucinn_ascendv2__Salutation__c/fields/ucinn_ascendv2__Contact_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salutations (Constituent 2)</relationshipLabel>
    <relationshipName>Salutations_Contact_2</relationshipName>
    <type>Lookup</type>
</CustomField>