force-app/main/default/objects/ucinn_ascendv2__Salutation__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salutations (Constituent)</relationshipLabel>
    <relationshipName>Salutations_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>