force-app/main/default/objects/ucinn_ascendv2__Salutation__c/fields/ucinn_ascendv2__Inside_Salutation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Inside_Salutation__c</fullName>
    <label>Inside Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>