force-app/main/default/objects/ucinn_ascendv2__Salutation__c/fields/ucinn_ascendv2__Salutation_Record_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Salutation_Record_Type_Formula__c</fullName>
    <formula>IF(RecordType.DeveloperName  = &quot;Individual_Salutation&quot;, &quot;Ind&quot;, &quot;Joint&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Record Type</label>
    <type>Text</type>
</CustomField>