force-app/main/default/objects/ucinn_ascendv2__Salutation__c/fields/ucinn_ascendv2__Salutation_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Salutation_Type__c</fullName>
    <label>Salutation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alumni Mailings</fullName>
            </value>
            <value>
                <fullName>Endowments</fullName>
            </value>
            <value>
                <fullName>Formal Address</fullName>
            </value>
            <value>
                <fullName>Formal Greeting</fullName>
            </value>
            <value>
                <fullName>Informal Address</fullName>
            </value>
            <value>
                <fullName>Informal Greeting</fullName>
            </value>
            <value>
                <fullName>Nametags</fullName>
            </value>
            <value>
                <fullName>Receipts</fullName>
            </value>
            <value>
                <fullName>Stacked Names</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>