force-app/main/default/objects/ucinn_ascendv2__Salutation__c/recordTypes/ISUF_Salutation.recordType-meta.xml
<RecordType>
    <fullName>ISUF_Salutation</fullName>
    <active>true</active>
    <description>For ISUF Use</description>
    <label>ISUF Salutation</label>
</RecordType>