force-app/main/default/objects/ucinn_ascendv2__Salutation__c/recordTypes/ucinn_ascendv2__Individual_Salutation.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Individual_Salutation</fullName>
    <active>true</active>
    <description>A constituent&apos;s salutation as an individual.</description>
    <label>Individual Salutation</label>
</RecordType>