force-app/main/default/objects/ucinn_ascendv2__Salutation__c/recordTypes/ucinn_ascendv2__Joint_Salutation.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Joint_Salutation</fullName>
    <active>true</active>
    <description>A constituent&apos;s salutation with their significant other considered.</description>
    <label>Joint Salutation</label>
</RecordType>