force-app/main/default/objects/ucinn_ascendv2__Salutation__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Contact_2__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Inside_Salutation__c</columns>
    <columns>ucinn_ascendv2__Salutation_Type__c</columns>
    <columns>ucinn_ascendv2__Addressee_Line_1__c</columns>
    <columns>ucinn_ascendv2__Salutation_Author__c</columns>
    <columns>ucinn_ascendv2__Author_Initials__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>